[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "shalz-customer-support-triage-openenv"
version = "0.1.0"
description = "Deterministic OpenEnv benchmark for SaaS customer support triage."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "Shalini Baddem" }
]
dependencies = [
  "fastapi>=0.115.0",
  "openai>=1.40.0",
  "pydantic>=2.7,<3",
  "pyyaml>=6.0.0",
  "uvicorn>=0.30.0"
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["customer_support_openenv*"]
